fix: swagger bearer
